# rinha-frontend

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  styles.css  styles.scss
.github/workflows/: pages.yml
docs/: index.html  rinha-frontend-rust-20da6dec6253cf32.js  rinha-frontend-rust-20da6dec6253cf32_bg.wasm  rinha-frontend-rust-22b550a376ad84e_bg.wasm  styles-856b26ef8f19324d.css  styles-87829f97b8121512.css
src/: main.rs
src/components/: app.rs  json_tree_viewer.rs  mod.rs  root.rs
src/services/: upload_file.rs
